--- a/openai_batch_processing_tutorial.ipynb
+++ b/openai_batch_processing_tutorial.ipynb
@@ -180,20 +180,21 @@
    "source": [
     "# Prompt, including examples\n",
     "# Also have it call the last name of the relevant candidate\n",
+    "# Note it is better to ask LLM's to reason first (why?) before asking them to answer. According to Korinek, like asking a student to think before answering.\n",
     "\n",
     "label_system_prompt_template = '''\n",
     "As a historian analyzing U.S. presidential campaigns, your goal is to compile presidential campaign speeches/public addresses/rallies from newspaper articles.\n",
     "Please respond to the following questions for each article. You will need to output a JSON object.\n",
     "\n",
     "{{\n",
-    "    \"speech\": boolean,    // Does the text describe or specifically reference a public speech, political address, or rally by {candidate_lname}? (true or false)\n",
     "    \"speech_why\": str,    // One-sentence explanation of why the text is or is not describing a public speech, address, or rally by {candidate_lname}.\n",
+    "    \"speech\": boolean,    // Does the text describe or specifically reference a public speech, political address, or rally by {candidate_lname}? (true or false)\n",
     "    \"town\": list[str],    // List of cities/towns where speeches took place, in the order they appear. Use empty list if none are mentioned.\n",
     "    \"state\": list[str],   // List of states (abbreviations) corresponding to those towns, in order. Use empty list if none are mentioned.\n",
     "    \"date\": list[str],    // List of dates (Y/M/D) for those speeches, in order. Use empty list if none are mentioned.\n",
     "    \"crowd\": list[int],   // List of crowd sizes at those speeches, in order. Use empty list if none are mentioned.\n",
-    "    \"sentiment\": str,     // Sentiment of the article specifically towards the candidate {candidate_lname} (positive, negative, neutral).\n",
     "    \"sentiment_why\": str, // One-sentence explanation of your sentiment classification.\n",
+    "    \"sentiment\": str,     // Sentiment of the article specifically towards the candidate {candidate_lname} (positive, negative, neutral).\n",
     "}}\n",
     "\n",
     "\n",
